src/integration_tests/snapshots/maestro__integration_tests__canonical_command_specs__snapshot_tokenize_plan_feature.snap
---
source: src/integration_tests/canonical_command_specs.rs
expression: "snapshot_tokens(\"plan-feature\")"
---
[
    (
        "INCLUDE",
        [
            (
                "path",
                "core/premises.md",
            ),
        ],
    ),
    (
        "SUBAGENT_LIST",
        [],
    ),
    (
        "VCS_PROVIDER_CMD",
        [],
    ),
    (
        "INCLUDE",
        [
            (
                "path",
                "core/dependency-graph.md",
            ),
        ],
    ),
    (
        "VCS_PROVIDER_CMD",
        [],
    ),
    (
        "VCS_PROVIDER_CMD",
        [],
    ),
]
