src/integration_tests/snapshots/maestro__integration_tests__canonical_command_specs__snapshot_tokenize_pushup.snap
---
source: src/integration_tests/canonical_command_specs.rs
assertion_line: 386
expression: "snapshot_tokens(\"pushup\")"
---
[
    (
        "INCLUDE",
        [
            (
                "path",
                "core/premises.md",
            ),
        ],
    ),
    (
        "INCLUDE",
        [
            (
                "path",
                "core/dependency-graph.md",
            ),
        ],
    ),
]
